<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue_gray_600">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_textField"

        app:boxBackgroundColor="@color/blue_gray_500"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/label"

        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"

        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_edit_text"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/pick_date_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pick_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_textField"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        style="?attr/materialButtonOutlinedStyle"
        android:backgroundTint="@color/blue_gray_500"
        >

    </Button>

    <Button
        android:id="@+id/pick_timeStart_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pick_time_start"
        android:onClick="showTimePickerDialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pick_date_button"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        style="?attr/materialButtonOutlinedStyle"
        android:backgroundTint="@color/blue_gray_500">

    </Button>

    <Button
        android:id="@+id/pick_timeFinish_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pick_time_finish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pick_timeStart_button"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="?attr/materialButtonOutlinedStyle"
        android:backgroundTint="@color/blue_gray_500">
        android:textColor="@color/white"


    </Button>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_textField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pick_timeFinish_button"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:boxBackgroundColor="@color/blue_gray_500"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_event_button"
        style="?attr/materialButtonOutlinedStyle"
        android:backgroundTint="@color/light_orange"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintTop_toBottomOf="@+id/description_textField"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp">

    </Button>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"/>




</androidx.constraintlayout.widget.ConstraintLayout>